2003-06-02  Mikhael Goikhman  <migo@homemail.com>

	* logo-competition/logos/Felix_E_Klee/index.php:
	* logo-competition/logos_new.php:
	disabled the Felix logos for now; other small changes

2003-06-02  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* birthday/index.php:
	Corrected typo.
	
	* logo-competition/logos/Felix_E_Klee/index.php
	* web-theme/classes/birthday_class.inc
	* web-theme/themes/theme_descriptions.inc
	Background color change for the birthday theme possible.
	
	* logo-competition/logos_new.php: 
	Provided images sizes.

2003-06-01  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos/Felix_E_Klee/index.php: 
	Added logos by Felix E. Klee

	* web-theme/classes/birthday_class.inc: 
	* web-theme/classes/default_class.inc:
	* web-theme/themes/plain_theme.inc:
	Added link to switch theme.

2003-05-31  Mikhael Goikhman  <migo@homemail.com>

	* **.html:
	* generated/txt2html.sh:
	* generated/manpages/manpages2html:
	* sample-menus/*.fvwmrc:
	* sample-menus/*.{gif,png,xpm}:
	* vector-buttons/*.fvwmrc:
	* vector-buttons/DecorDemo[1-5].gif:
	removed the old html-based home page version

	* web-theme/classes/base_class.inc:
	strip trailing index.php to make urls better

	* index.php:
	* pictures/new.gif:
	center some things and use a [new] image instead of ugly NEWS FLASH

	* birthday/index.php:
	* web-theme/classes/birthday_class.inc:
	* web-theme/classes/default_class.inc:
	improved the look of the birthday theme (hopefully)

2003-05-31  Uwe Pross  <uwe.pross@gmx.net>

	* definitions.inc:
	set birthday theme as default.
	
	* web-theme/themes/birthday_theme.inc: 
	Added css information for history page

	* history.php: 
	Created history information file

	* latest_news/index.php: 
	* latest_news/news_template.php_: 
	Added "birthday" site as child
	
	* navgen.cli: 
	Small fixes. Colored warnings
	
	* index.php: 
	* links.php: 
	* customize_theme/index.php: 
	Changed customize page as child of "links" page to get history
	page as child of "home"
	